--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,19 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
+        android:name=".PersonApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo"
-        android:name=".PersonApplication"
         android:label="Youngsta"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Education_App">
         <activity
             android:name=".Register"
+            android:exported="false" />
+        <activity
+            android:name=".Main2Activity"
             android:exported="false" />
         <activity
             android:name=".LoginScreen"
@@ -24,11 +26,10 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-
 
 </manifest>
